<resources>
    <string name="app_name">Ricomusic</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="dont_have_account">Don\'t Have Account?</string>
    <string name="username">Username</string>
    <string name="travel">Travel</string>
    <string name="library">Library</string>
    <string name="canteen">Canteen</string>
    <string name="gym">Gym</string>
    <string name="office">Office</string>
    <string name="title_profile">Profile</string>
    <string name="title_browse">Browse</string>
    <string name="title_search">Search</string>
    <string name="song_search_hint">Enter song title</string>
    <string name="default_music_title">Title</string>
    <string name="default_music_artist">Artist</string>
    <string name="heading_for_you_section">For You</string>
    <string name="registering_text">Registering... This might take a while</string>
    <string name="default_calculating_recommendation">Calculating recommendation...</string>
    <string name="recommendation_is_on_its_way">Recommendation is on its way!</string>
    <string name="wait_recommendation_is_coming">Wait! Recommendation is coming!</string>
    <string name="standby_and_get_your_recommendation">Standby and get your recommendation!</string>
    <string name="multiplying_this_and_this_and_that">Multiplying this and this and that...</string>
    <string name="packaging_your_recommendation">Packaging your recommendation...</string>
</resources>
