<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.reeechart.ricomusic.activities.PickLocationActivity">

    <TextView
        android:id="@+id/instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="Pick a Location"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/confirmLocationButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorPrimary"
        android:onClick="confirmLocation"
        android:text="Confirm"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/locationPicker"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instruction">

        <RadioButton
            android:id="@+id/radioGym"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_margin="8dp"
            android:background="@drawable/location_button"
            android:button="@android:color/transparent"
            android:checked="true"
            android:drawableTop="@drawable/ic_location_gym"
            android:paddingTop="8dp"
            android:text="@string/gym"
            android:textAlignment="center"
            android:textColor="@android:color/white" />

        <RadioButton
            android:id="@+id/radioOffice"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_margin="8dp"
            android:background="@drawable/location_button"
            android:button="@android:color/transparent"
            android:drawableTop="@drawable/ic_location_office"
            android:paddingTop="8dp"
            android:text="@string/office"
            android:textAlignment="center"
            android:textColor="@android:color/white" />

        <RadioButton
            android:id="@+id/radioCanteen"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_margin="8dp"
            android:background="@drawable/location_button"
            android:button="@android:color/transparent"
            android:drawableTop="@drawable/ic_location_canteen"
            android:paddingTop="8dp"
            android:text="@string/canteen"
            android:textAlignment="center"
            android:textColor="@android:color/white" />

        <RadioButton
            android:id="@+id/radioLibrary"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_margin="8dp"
            android:background="@drawable/location_button"
            android:button="@android:color/transparent"
            android:drawableTop="@drawable/ic_location_library"
            android:paddingTop="8dp"
            android:text="@string/library"
            android:textAlignment="center"
            android:textColor="@android:color/white" />

        <RadioButton
            android:id="@+id/radioTravel"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_margin="8dp"
            android:background="@drawable/location_button"
            android:button="@android:color/transparent"
            android:drawableTop="@drawable/ic_location_travel"
            android:gravity="center"
            android:paddingTop="8dp"
            android:text="@string/travel"
            android:textAlignment="center"
            android:textColor="@android:color/white" />

    </RadioGroup>
</android.support.constraint.ConstraintLayout>
